--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,6 +1,10 @@
 * { margin:0; padding:0; }
 
-html, body { width:100%; height:100%; }
+html, body {
+    width:100%;
+    height:100%;
+    background-color: rgb(96, 96, 96)
+}
 
 canvas { display:block; }
 
